--- a/Passthru.csproj
+++ b/Passthru.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{008A8478-3E37-4A9D-AF1C-B845730A7337}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>PassThruJ2534</RootNamespace>
-    <AssemblyName>PassThruDiagnostics</AssemblyName>
+    <AssemblyName>Generic Diagnostic Tool</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -15,7 +15,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -37,6 +37,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>gdt.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="J2534-Sharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\J2534-Sharp.1.0.0-CI00036\lib\net48\J2534-Sharp.dll</HintPath>
@@ -52,15 +55,48 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="lib\Decoder\VIN_DECODER.cs" />
+    <Compile Include="lib\Forms\Hex2Dec.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Forms\Hex2Dec.Designer.cs">
+      <DependentUpon>Hex2Dec.cs</DependentUpon>
+    </Compile>
+    <Compile Include="lib\Interface\connectSelectedJ2534Device.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="lib\Interface\J2534.cs" />
     <Compile Include="lib\Interface\J2534DeviceFinder.cs" />
     <Compile Include="lib\Interface\J2534Devices.cs" />
     <Compile Include="lib\Algorithms\SecurityAlgorithms.cs" />
     <Compile Include="lib\Algorithms\SecurityKeys.cs" />
+    <Compile Include="lib\Interface\J2534_Struct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Interface\CanSniffer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Interface\sendPassThruMsg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Main\addTxtCan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Main\HexToASCII.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Main\log.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Main\StringToByteArray.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="lib\Services\CONRTOL_DTC_SETTING.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="lib\Services\DIAGNOSTIC_SESSION_CONTROL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lib\Services\DIAGNOSTIC_TROUBLE_CODES.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="lib\Services\ECU_RESET.cs">
@@ -69,7 +105,13 @@
     <Compile Include="lib\Services\NEGATIVE_RESPONSE_CODES.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="lib\Services\OBD2.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="lib\Services\Protocol.cs" />
+    <Compile Include="lib\Services\READ_MEMORY_BY_ADDRESS.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="lib\Services\SECURITY_ACCESS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +139,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="lib\Forms\Hex2Dec.resx">
+      <DependentUpon>Hex2Dec.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PassThru.resx">
       <DependentUpon>PassThru.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +163,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="lib\Media\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="gdt.ico" />
+    <Content Include="gdt2.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
